--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,11 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/*
+green color used is #4acaa8
+blue replacement is #2468a8
+*/
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -1785,7 +1790,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #2468a8;
 		font-size: 3.5em;
 	}
 
@@ -2402,7 +2407,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #4acaa8;
+				background: #2468a8;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2700,7 +2705,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: #2468a8;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2808,7 +2813,7 @@ input, select, textarea {
 
 						#header > nav ul li a:hover {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #2468a8 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -3076,7 +3081,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #2468a8;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
