--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@
 /*
 green color used is #4acaa8
 blue replacement is #2468a8
+new green is #194105
+
+all fff and ffffff changed to fffff0 (ivory)
 */
 
 html, body, div, span, applet, object,
@@ -90,7 +93,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: #f0fff0;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -124,7 +127,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #2468a8 !important;
+			color: #053315 !important;
 		}
 
 	strong, b {
@@ -210,7 +213,7 @@ input, select, textarea {
 	code {
 		background: #555;
 		border-radius: 5px;
-		color: #fff;
+		color: #f0fff0;
 		font-family: "Source Code Pro", monospace;
 		font-size: 0.9em;
 		margin: 0 0.25em;
@@ -1792,7 +1795,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #2468a8;
+		color: #194105;
 		font-size: 3.5em;
 	}
 
@@ -1855,7 +1858,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #2468a8;
+			border-color: #194105;
 		}
 
 	select {
@@ -1870,7 +1873,7 @@ input, select, textarea {
 
 		select option {
 			color: #777;
-			background: #fff;
+			background: #f0fff0;
 		}
 
 		select:focus::-ms-value {
@@ -1954,13 +1957,13 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #989898;
 			border-color: #989898;
-			color: #ffffff;
+			color: #f0fff0;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #2468a8;
+			border-color: #194105;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2409,9 +2412,9 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #2468a8;
+				background: #194105;
 				border-radius: 100%;
-				color: #ffffff;
+				color: #f0fff0;
 				display: block;
 				height: 2.5em;
 				left: 0;
@@ -2528,7 +2531,7 @@ input, select, textarea {
 		background-color: #989898;
 		border-radius: 5px;
 		border: 0;
-		color: #ffffff !important;
+		color: #f0fff0 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 700;
@@ -2545,7 +2548,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		.button:hover {
 			background-color: #a5a5a5;
-			color: #ffffff !important;
+			color: #f0fff0 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2625,8 +2628,8 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #2468a8;
-			color: #ffffff !important;
+			background-color: #194105;
+			color: #f0fff0 !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2652,7 +2655,7 @@ input, select, textarea {
 		.button:disabled {
 			background-color: #888 !important;
 			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-			color: #fff !important;
+			color: #f0fff0 !important;
 			cursor: default;
 			opacity: 0.25;
 		}
@@ -2707,8 +2710,8 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #2468a8;
-		color: #d2f2e9;
+		background: #194105;
+		color: #dbf2d2;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2719,23 +2722,23 @@ input, select, textarea {
 	}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
-			color: #ffffff;
+			color: #f0fff0;
 		}
 
 			#header h1 a, #header h2 a, #header h3 a, #header h4 a, #header h5 a, #header h6 a {
-				color: #ffffff;
+				color: #f0fff0;
 			}
 
 		#header header p {
-			color: #b7eadc;
+			color: #bceab7;
 		}
 
 		#header a {
-			color: #d2f2e9;
+			color: #dbf2d2;
 		}
 
 			#header a:hover {
-				color: #ffffff !important;
+				color: #f0fff0 !important;
 			}
 
 		#header > header {
@@ -2758,7 +2761,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #d2f2e9;
+				color: #dbf2d2;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2796,7 +2799,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb1;
+					border-top: solid 2px #f0fff0;
 					display: block;
 					padding: 0;
 				}
@@ -2807,15 +2810,15 @@ input, select, textarea {
 						-ms-transition: none;
 						transition: none;
 						border: 0;
-						color: #ffffff !important;
+						color: #f0fff0 !important;
 						display: block;
 						padding: 0.85em 0;
 						text-decoration: none;
 					}
 
 						#header > nav ul li a:hover {
-							background: #fff;
-							color: #2468a8 !important;
+							background: #f0fff0;
+							color: #194105 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -2825,7 +2828,7 @@ input, select, textarea {
 /* Wrapper */
 
 	#wrapper {
-		background: #fff;
+		background: #f0fff0;
 		padding-right: 23em;
 	}
 
@@ -2846,7 +2849,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #fafafa;
+		background: #f0fff0;
 		border-top: 0;
 		color: #c0c0c0;
 		overflow: hidden;
@@ -3038,12 +3041,12 @@ input, select, textarea {
 				width: 100%;
 				z-index: 10001;
 				background: #222;
-				color: #fff;
+				color: #f0fff0;
 				min-width: 320px;
 			}
 
 				#titleBar .title {
-					color: #fff;
+					color: #f0fff0;
 					display: block;
 					font-weight: 700;
 					height: 44px;
@@ -3083,8 +3086,8 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #2468a8;
-						color: #ffffff;
+						background: #194105;
+						color: #f0fff0;
 						content: '\f0c9';
 						display: block;
 						font-size: 18px;
