final css changes maybe

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2853,7 +2853,7 @@ input, select, textarea {
 	#footer {
 		background: #eaffea;
 		border-top: dotted #194105;
-		color: #a9a9a9;
+		color: #8e8e8e;
 		overflow: hidden;
 		padding: 2em 0 2em 0;
 	}
